# phone-manager-backend

./: .dockerignore  .env.example  .gitignore  .test_users  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml  local.toml  minimal.toml
crates/api/: Cargo.toml
crates/api/assets/swagger-ui/: index.html
crates/api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
crates/api/src/extractors/: api_key.rs  idempotency_key.rs  mod.rs  user_auth.rs
crates/api/src/jobs/: cleanup_locations.rs  mod.rs  pool_metrics.rs  refresh_views.rs  report_generation.rs  scheduler.rs  webhook_cleanup.rs  webhook_retry.rs
crates/api/src/middleware/: auth.rs  features.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  rbac.rs  security_headers.rs  system_rbac.rs  trace_id.rs  user_auth.rs  version_check.rs
crates/api/src/routes/: admin.rs  admin_geofences.rs  admin_groups.rs  admin_locations.rs  admin_managed_users.rs  admin_migrations.rs  admin_unlock_requests.rs  admin_users.rs  analytics.rs  api_keys.rs  app_usage.rs  audit_logs.rs  auth.rs  bulk_import.rs  compliance.rs  dashboard.rs  data_subject_requests.rs  device_policies.rs  device_settings.rs  devices.rs  enrollment.rs  enrollment_tokens.rs  fleet.rs  frontend.rs  geofence_events.rs  geofences.rs  groups.rs  health.rs  invites.rs  locations.rs  mod.rs  movement_events.rs  openapi.rs  org_invitations.rs  org_webhooks.rs  organization_settings.rs  organizations.rs  permissions.rs  privacy.rs  proximity_alerts.rs  (+8 more)
crates/api/src/services/: admin_bootstrap.rs  apple_auth.rs  auth.rs  cookies.rs  email.rs  fcm.rs  map_matching.rs  mod.rs  path_correction.rs  report_generation.rs  webhook_delivery.rs
crates/api/tests/: admin_integration.rs  admin_managed_users_integration.rs  audit_logs_integration.rs  auth_integration.rs  dashboard_integration.rs  device_policies_integration.rs  device_settings_integration.rs  devices_integration.rs  enrollment_integration.rs  enrollment_tokens_integration.rs  geofence_events_integration.rs  geofences_integration.rs  groups_integration.rs  invites_integration.rs  locations_integration.rs  movement_events_integration.rs  organizations_integration.rs  privacy_integration.rs  proximity_alerts_integration.rs  trips_integration.rs  users_integration.rs  webhooks_integration.rs
crates/api/tests/common/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/models/: admin_geofence.rs  admin_group.rs  admin_user.rs  analytics.rs  api_key.rs  app_usage.rs  audit_log.rs  bulk_import.rs  compliance.rs  dashboard.rs  data_subject_request.rs  device.rs  device_policy.rs  device_token.rs  enrollment.rs  enrollment_token.rs  fleet.rs  geofence.rs  geofence_event.rs  group.rs  invite.rs  location.rs  managed_user.rs  mod.rs  movement_event.rs  org_member_invite.rs  org_user.rs  org_webhook.rs  organization.rs  organization_role.rs  organization_settings.rs  permission.rs  proximity_alert.rs  setting.rs  setting_change.rs  system_config.rs  system_role.rs  trip.rs  trip_path_correction.rs  unlock_request.rs  (+4 more)
crates/domain/src/services/: audit.rs  mod.rs  notification.rs  policy_resolution.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: db.rs  lib.rs  metrics.rs
crates/persistence/src/entities/: admin_geofence.rs  admin_group.rs  admin_user.rs  analytics.rs  api_key.rs  app_usage.rs  audit_export_job.rs  audit_log.rs  data_subject_request.rs  device.rs  device_command.rs  device_group_membership.rs  device_policy.rs  device_token.rs  enrollment_token.rs  geofence.rs  geofence_event.rs  group.rs  idempotency_key.rs  invite.rs  location.rs  managed_user.rs  migration_audit.rs  mod.rs  movement_event.rs  org_member_invite.rs  org_user.rs  org_webhook.rs  organization.rs  organization_settings.rs  proximity_alert.rs  registration_invite.rs  setting.rs  setting_change.rs  system_config.rs  system_role.rs  trip.rs  trip_path_correction.rs  unlock_request.rs  user.rs  (+3 more)
crates/persistence/src/migrations/: 001_initial.sql  002_devices.sql  003_locations.sql  004_api_keys.sql  005_views_and_functions.sql  006_idempotency_keys.sql  007_performance_indexes.sql  008_geofences.sql  009_proximity_alerts.sql  010_drop_recent_index.sql  011_movement_events.sql  012_trips.sql  013_location_context_fields.sql  014_trip_path_corrections.sql  015_user_authentication_schema.sql  016_password_reset_columns.sql  017_email_verification_columns.sql  018_device_user_binding.sql  019_groups.sql  020_group_invites.sql  021_user_avatar_url.sql  022_device_settings.sql  023_unlock_requests.sql  024_organizations.sql  025_org_users.sql  026_device_policies.sql  027_enrollment_tokens.sql  028_device_enrollment.sql  029_fleet_management.sql  030_bulk_device_import.sql  031_audit_logs.sql  032_audit_export_jobs.sql  033_webhooks.sql  034_geofence_events.sql  035_webhook_deliveries.sql  036_webhook_circuit_breaker.sql  037_registration_invites.sql  038_api_keys_user_binding.sql  039_organization_settings.sql  040_api_keys_organization_binding.sql  (+17 more)
crates/persistence/src/repositories/: admin_geofence.rs  admin_group.rs  admin_user.rs  analytics.rs  api_key.rs  app_usage.rs  audit_export_job.rs  audit_log.rs  dashboard.rs  data_subject_request.rs  device.rs  device_command.rs  device_group_membership.rs  device_policy.rs  device_token.rs  enrollment_token.rs  geofence.rs  geofence_event.rs  group.rs  idempotency_key.rs  invite.rs  location.rs  managed_user.rs  migration_audit.rs  mod.rs  movement_event.rs  org_member_invite.rs  org_user.rs  org_webhook.rs  organization.rs  organization_role.rs  organization_settings.rs  proximity_alert.rs  registration_invite.rs  setting.rs  setting_change.rs  system_config.rs  system_role.rs  trip.rs  trip_path_correction.rs  (+5 more)
crates/shared/: Cargo.toml
crates/shared/src/: crypto.rs  jwt.rs  lib.rs  pagination.rs  password.rs  validation.rs
docs/: .!31856!PRD-movement-tracking.md  ANDROID_APP_SPEC.md  BACKEND_API_SPEC.md  JWT_KEY_ROTATION.md  PRD-admin-portal.md  PRD-movement-tracking.md  PRD-user-management.md  PRD.md  epics.md  (+10 more)
(+191 files in other folders)
