[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/domain",
    "crates/persistence",
    "crates/shared",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
rust-version = "1.83"
authors = ["Phone Manager Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full", "tracing"] }

# Web framework
axum = { version = "0.7", features = ["macros", "tracing"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout", "compression-gzip"] }
hyper = { version = "1.2", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Security - using pinned versions to avoid base64ct 1.8 which requires Edition 2024
sha2 = "=0.10.8"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
base64 = "0.21"
argon2 = "0.5"
jsonwebtoken = "9.3"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.14"

# Async utilities
async-trait = "0.1"

# Geospatial
geo = "0.28"

# Rate limiting
governor = "0.7"

# Regex and lazy initialization
regex = "1.10"
lazy_static = "1.4"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Testing
tokio-test = "0.4"
fake = { version = "2.9", features = ["chrono", "uuid"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true


