[package]
name = "phone-manager-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "phone-manager"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
persistence = { path = "../persistence" }
shared = { path = "../shared" }

tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
tokio-test.workspace = true
fake.workspace = true
