[package]
name = "phone-manager-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "phone-manager"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
persistence = { path = "../persistence" }
shared = { path = "../shared" }

tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
validator.workspace = true
chrono.workspace = true
uuid.workspace = true
config.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
async-trait.workspace = true
governor.workspace = true
geo.workspace = true
base64.workspace = true
reqwest.workspace = true
hex.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true

# OpenAPI / Swagger UI
rust-embed = "8.5"
mime_guess = "2.0"

[dev-dependencies]
tokio-test.workspace = true
fake.workspace = true
tower = { version = "0.4", features = ["util"] }

[lib]
name = "phone_manager_api"
path = "src/lib.rs"

[[test]]
name = "auth_integration"
path = "tests/auth_integration.rs"
