[package]
name = "domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared = { path = "../shared" }

serde.workspace = true
serde_json.workspace = true
validator.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
rand.workspace = true
regex.workspace = true
lazy_static.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
fake.workspace = true
