[package]
name = "shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
base64.workspace = true
validator.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
fake.workspace = true
serde_json.workspace = true
